# privy

./: .gitignore  CLAUDE.md  README.md  entitlements.plist  example_data.docx  notes.txt  out.docx  out.docx.map.enc.json  out.docx.map.json  privy.spec  pyproject.toml  ~$ample_data.docx
.github/workflows/: build-macos.yml
examples/: model_adapter_example.py
packaging/: distribution.xml
packaging/resources/: welcome.html
packaging/scripts/: postinstall  preinstall
scripts/: build_macos.sh
src/privy_cli/: __init__.py  __main__.py  anonymizer.py  cli.py  detector.py  docx_engine.py  gui.py  gui_html.py  mapping_store.py  types.py
src/privy_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_docx_roundtrip.py  test_mapping_store.py
