[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privy-cli"
version = "0.1.0"
description = "Local AI-powered CLI for reversible DOCX anonymization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "python-docx>=1.1.2",
  "gliner>=0.2.5",
]

[project.optional-dependencies]
gui = [
  "pywebview>=5.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
privy = "privy_cli.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
